--- a/Meu Site/ex22/fundo006.html
+++ b/Meu Site/ex22/fundo006.html
@@ -8,16 +8,23 @@
 <style>
     body {
         height: 97vh;
-        background-color: blue;
+        /* background-color: blue;
         background-image: url(imagens/wallpaper002.jpg);
         background-position: center top;
-        background-repeat: no-repeat;
-        background-size: contain;
+        background-repeat: repeat-y;
+        background-size: cover;
+        background-attachment: fixed; */
+
+        /* shothand background
+        color > image > position > repeat > (size) > attachment */
+
+        background: blue url(imagens/wallpaper002.jpg) center center repeat-y fixed;
+        background-size: cover;
     }
 
     main {
         background-color: white;
-        width: 400px;
+        max-width: 400px;
         padding: 10px;
         margin: auto;
         border: 1px solid darkblue;
@@ -27,6 +34,12 @@
 <body>
     <main>
         <h1>Testando tamanho do fundo</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia non beatae reiciendis sapiente sint distinctio rerum eos ad, pariatur reprehenderit voluptatibus sunt molestiae, illo dolores optio ratione corporis nulla numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia saepe totam, velit sed iure exercitationem suscipit inventore nemo provident maxime numquam repellat, modi dicta harum doloribus. Aut, dolorem consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ducimus iusto sit optio quasi accusamus minus! Inventore ullam nobis, totam blanditiis numquam voluptas, quisquam quis architecto corrupti veniam a aut.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia non beatae reiciendis sapiente sint distinctio rerum eos ad, pariatur reprehenderit voluptatibus sunt molestiae, illo dolores optio ratione corporis nulla numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia saepe totam, velit sed iure exercitationem suscipit inventore nemo provident maxime numquam repellat, modi dicta harum doloribus. Aut, dolorem consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ducimus iusto sit optio quasi accusamus minus! Inventore ullam nobis, totam blanditiis numquam voluptas, quisquam quis architecto corrupti veniam a aut.
+        </p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia non beatae reiciendis sapiente sint distinctio rerum eos ad, pariatur reprehenderit voluptatibus sunt molestiae, illo dolores optio ratione corporis nulla numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia saepe totam, velit sed iure exercitationem suscipit inventore nemo provident maxime numquam repellat, modi dicta harum doloribus. Aut, dolorem consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ducimus iusto sit optio quasi accusamus minus! Inventore ullam nobis, totam blanditiis numquam voluptas, quisquam quis architecto corrupti veniam a aut.
+        </p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia non beatae reiciendis sapiente sint distinctio rerum eos ad, pariatur reprehenderit voluptatibus sunt molestiae, illo dolores optio ratione corporis nulla numquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat quia saepe totam, velit sed iure exercitationem suscipit inventore nemo provident maxime numquam repellat, modi dicta harum doloribus. Aut, dolorem consectetur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae ducimus iusto sit optio quasi accusamus minus! Inventore ullam nobis, totam blanditiis numquam voluptas, quisquam quis architecto corrupti veniam a aut.
         </p>
     </main>
