atualização de formulario

--- a/Meu Site/ex025/index.html
+++ b/Meu Site/ex025/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1>Meu primeiro formulario</h1>
-    <form action="cadastro.php" autocomplete="off">
+    <form action="cadastro.php" method="post" autocomplete="off">
         <p><label for="inome">Nome:</label> <input type="text" name="nome" id="inome"></p>
         <p><label for="isnome">Sobrenome:</label> <input type="text" name="snome" id="isnome"> </p>
         <p><input type="submit" value="Enviar"></p>
